--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,8 @@
 {
   "routes": [
-    { "src": "/(.*\\..*)", "dest": "/$1" },
-    { "src": "/.*", "dest": "/index.html" }
+    {
+      "src": "/(.*)",
+      "status": 503
+    }
   ]
 }
