--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,6 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/maintenance.html"
-    }
+  "routes": [
+    { "src": "/(.*\\..*)", "dest": "/$1" },
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
