--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
+    "@react-oauth/google": "^0.13.4",
     "axios": "^1.6.0",
     "lucide-react": "^0.555.0",
     "prop-types": "^15.8.1",
