--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "prebuild": "node tools/find_css_issues.cjs",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js,.jsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext .js,.jsx --report-unused-disable-directives --max-warnings 0",
+    "check-css": "node tools/find_css_issues.cjs"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
